final draft homework

--- a/PyCitySchool/PyCitySchools_starter.ipynb
+++ b/PyCitySchool/PyCitySchools_starter.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 377,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "15"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "39170"
       ]
      },
-     "execution_count": 379,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "24649428"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 383,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "85.80546336482001"
       ]
      },
-     "execution_count": 384,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 385,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 386,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -486,22 +486,21 @@
        "Name: Student ID, dtype: int64"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the total student count per school\n",
-    "# per_school_counts = school_data_complete.value_counts([\"size\"])\n",
-    "# per_school_counts\n",
+    "\n",
     "per_school_counts = school_data_complete.groupby(\"school_name\")[\"Student ID\"].count()\n",
     "per_school_counts\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +525,7 @@
        "Name: budget, dtype: float64"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -552,30 +551,25 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the total school budget and per capita spending per school\n",
-    "#per_school_budget = school_data_complete.value_counts([\"budget\"])\n",
-    "#per_school_capita = per_school_budget/per_school_counts\n",
+    "\n",
     "per_school_budget = school_data_complete.groupby(\"school_name\")[\"budget\"].unique()\n",
     "per_school_budget = per_school_budget.astype(float)\n",
     "per_school_capita = per_school_budget/per_school_counts\n",
     "per_school_capita = per_school_capita.astype(float)\n",
     "per_school_budget\n",
-    "per_school_capita\n",
-    "# per_school_budget = school_data_complete.groupby(\"school_name\")[\"budget\"].unique().sum()\n",
-    "# per_school_budget \n",
-    "# per_school_capita = (per_school_budget/per_school_counts)\n",
-    "# per_school_capita"
+    "per_school_capita\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +611,7 @@
        " Name: reading_score, dtype: float64)"
       ]
      },
-     "execution_count": 390,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +650,7 @@
        "Name: Student ID, dtype: int64"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,14 +658,14 @@
    "source": [
     "# Calculate the number of students per school with math scores of 70 or higher\n",
     "students_passing_math = school_data_complete[school_data_complete[\"math_score\"]>=70].groupby(\"school_name\")[\"Student ID\"].count()\n",
-    "#school_students_passing_math = school_data_complete.groupby(\"school_name\")[students_passing_math]\n",
+    "\n",
     "school_students_passing_math = students_passing_math\n",
     "school_students_passing_math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +690,7 @@
        "Name: Student ID, dtype: int64"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +729,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 393,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,12 +745,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use the provided code to calculate the passing rates\n",
-    "#per_school_counts = per_school_counts.unique()\n",
+    "\n",
     "per_school_passing_math = (school_students_passing_math / per_school_counts) * 100\n",
     "per_school_passing_reading = (school_students_passing_reading / per_school_counts) * 100\n",
     "overall_passing_rate = (school_students_passing_math_and_reading / per_school_counts) * 100"
@@ -764,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1048,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 408,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1222,7 +1216,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 410,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1367,7 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 411,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1547,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 412,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1593,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1752,7 +1746,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 413,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1793,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1804,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1816,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 415,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1835,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2158,18 +2152,16 @@
        "Wright High School                            <$585  "
       ]
      },
-     "execution_count": 416,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Use `pd.cut` to categorize spending based on the bins.\n",
-    "# school_spending_df[\"Spending Ranges (Per Student)\"] = pd.cut(school_spending_df[\"Per Student Budget\"], bins=spending_bins, labels = labels, right = False)\n",
-    "# school_spending_df\n",
+    "\n",
     "# Use `pd.cut` to categorize spending based on the bins.\n",
     "school_spending_df[\"Spending Ranges (Per Student)\"] = pd.cut(\n",
-    "#\tschool_spending_df[\"Per Student Budget\"],\n",
     "    school_spending_df[\"Per Student Budget\"].str.replace(\"$\", \"\").astype(float),\n",
     "    spending_bins,\n",
     "    labels=labels,\n",
@@ -2181,7 +2173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2195,7 +2187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2294,7 +2286,7 @@
        "$645-680                               53.526855  "
       ]
      },
-     "execution_count": 421,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2325,7 +2317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2336,7 +2328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2659,7 +2651,7 @@
        "Wright High School     Medium (1000-2000)  "
       ]
      },
-     "execution_count": 423,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2679,7 +2671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2693,7 +2685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -2777,7 +2769,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 430,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2809,7 +2801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2823,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2895,7 +2887,7 @@
        "Charter              80.799062          53.672208  "
       ]
      },
-     "execution_count": 438,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
